# Backend

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  localdatabase.json  pyproject.toml  requirements.txt
.github/workflows/: build_and_push.yml  build_and_push_dev.yml  build_and_push_dev_1.yml  build_and_push_qa.yml  deploy.yaml  deploy.yml  deploy_1.yml  deploy_2.yml  qa_deploy.yml
infra/: certbot_renew_dev.sh  certbot_renew_qa.sh  docker-compose-dev.yaml  docker-compose-local.yaml  docker-compose-prod.yaml
infra/backend/: Dockerfile
infra/certbot/: Dockerfile  certbot_cron.cron
infra/nginx/: Dockerfile  nginx_dev.conf  nginx_qa.conf
src/backend/api/v1/: urls.py
src/backend/api/v1/general/: constants.py  fields.py  mixins.py  paginations.py  serializers.py  urls.py  views.py
src/backend/api/v1/profile/: constants.py  filters.py  paginations.py  serializers.py  signals.py  urls.py  views.py
src/backend/api/v1/projects/: constants.py  filters.py  mixins.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
src/backend/api/v1/users/: serializers.py  urls.py
src/backend/apps/general/: constants.py  fields.py  models.py  validators.py
src/backend/apps/profile/: admin.py  apps.py  constants.py  models.py  validators.py
src/backend/apps/projects/: admin.py  apps.py  constants.py  models.py  signals.py  tasks.py
src/backend/apps/users/: apps.py  models.py
src/backend/config/settings/: base.py  dev.py  local.py  prod.py  test.py
src/backend/data/fixtures/: profession.json  specialist.json  user.json
src/backend/templates/email/: invitation.html
src/backend/tests/: README.md  conftest.py
src/backend/tests/profile/: conftest.py  test_model.py
src/backend/tests/projects/: conftest.py  test_model.py  test_serializers.py
(+47 files in other folders)
